<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/save"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/save"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/load"
          android:icon="@drawable/ic_menu_archive"
          android:title="@string/load"
          android:showAsAction="ifRoom|withText">
        <menu>
        <item android:id="@+id/load_external"
          android:title="@string/loadExternal"
          android:showAsAction="ifRoom"/>
	    <item android:id="@+id/brickbreaker"
          android:title="@string/brickbreaker"
          android:showAsAction="ifRoom"/>
        <item android:id="@+id/tutorial_game"
          android:title="@string/tutorial"
          android:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item android:id="@+id/exportbutton"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/export"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/reset"
          android:icon="@android:drawable/ic_menu_delete"
          android:title="@string/reset"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/optionsButton"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/options"
          android:showAsAction="never|withText"/>
    
    
</menu>
